<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_widget_edit_text_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_search_query_hint"
        android:theme="@style/editTextStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="5dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/search_widget_begin_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/activity_search_begin_date"/>
            <EditText
                android:id="@+id/search_widget_edit_text_date_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:focusable="false"
                android:theme="@style/editTextStyle"
                android:textAlignment="textStart"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/search_widget_end_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/activity_search_end_date" />
            <EditText
                android:id="@+id/search_widget_edit_text_date_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:focusable="false"
                android:theme="@style/editTextStyle"
                android:textAlignment="textStart"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/search_widget_arts_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/checkBoxStyle"
                android:text="@string/category_arts"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/search_widget_business_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/checkBoxStyle"
                android:text="@string/category_business"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/search_widget_travel_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/checkBoxStyle"
                android:text="@string/category_travel"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/search_widget_politics_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/checkBoxStyle"
                android:text="@string/category_politics"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/search_widget_sports_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/checkBoxStyle"
                android:text="@string/category_sports"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/search_widget_entrepreneurs_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/checkBoxStyle"
                android:text="@string/category_entrepreneurs"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:alpha="0.12"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Switch
        android:id="@+id/search_widget_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications" />
</LinearLayout>